feat: Refactor variable types to use EngineVariable; update collision and rendering logic for v2 compatibility
Again, that's Claude Code work. I'll check this later.